# sCT_generation

./: .gitignore  README.md  requirements.txt
data/: patients_list.xlsx
data/raw_data/Task1/brain/overview/: 1_brain_train.xlsx
sources/data_acquisition/: data_downloading.py  getImageDimension.py  get_patients_list.py  reorganize_data_folders.py  restructure_folders.py  unzip_file.py
sources/evaluation/: metrics.py
sources/loss/: losses.py
sources/main/: .main_UNet_2d.py.swp  .main_vanillaGAN_2d.py.swp  main_UNet_2d.py  main_vanillaGAN_2d.py
sources/models/: CNN_2d.py  UNet_2d.py  testing_function.py  testing_functions.py  training_functions.py
sources/models/GAN/: vanillaGAN.py
sources/preprocessing/: preprocessing.py
sources/preprocessing/lib/n4_bias_field_correction/: CMakeCache.txt  CMakeLists.txt
sources/preprocessing/lib/n4_bias_field_correction/source/: n4_bias_field_correction.cpp
sources/preprocessing/lib/resampling/: .readme.txt.swp  CMakeLists.txt  readme.txt
sources/preprocessing/lib/resampling/source/: resample.cpp
sources/utils/: nii_file_manipulation.py  simpleITK_utils.py
